--- a/App Ukhupacha/Assembly-CSharp.csproj
+++ b/App Ukhupacha/Assembly-CSharp.csproj
@@ -53,7 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
+     <Compile Include="Assets\Scripts\Scientists\Movement.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
  <Reference Include="Unity.RenderPipelines.Core.Editor">
  <HintPath>E:/MIS DOCUMENTOS/UNITY/App Ukhupacha/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
