--- a/App Ukhupacha/Assembly-CSharp.csproj
+++ b/App Ukhupacha/Assembly-CSharp.csproj
@@ -53,9 +53,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Manager\Exit.cs" />
      <Compile Include="Assets\Scripts\Scientists\Movement.cs" />
      <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
      <Compile Include="Assets\Scripts\UI\ClickAndDrag.cs" />
+     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
+     <Compile Include="Assets\Scripts\UI\ExitMenu.cs" />
+     <Compile Include="Assets\Scripts\UI\InitialMenu.cs" />
+     <Compile Include="Assets\Scripts\UI\ResetLevel.cs" />
+     <Compile Include="Assets\Scripts\UI\ShowMenu.cs" />
+     <Compile Include="Assets\Scripts\UI\StartGame.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
  <Reference Include="Unity.RenderPipelines.Core.Editor">
  <HintPath>C:/Users/PcCom/Documents/GitHub/App-Ukhupacha/App Ukhupacha/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
